building out description

--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-      <div class="time-block text-center">
+      <div class="timeblock text-center">
         <div class="row">
-          <div id="hour" class="col-2 hour">9:00am</div>
+          <div id="9" class="col-2 hour">9:00am</div>
           <textarea class="col-8 description">
           </textarea>
-          <button id='saveBtn'class="col-2 saveBtn"> Save
+          <button id='9-btn'class="col-2 saveBtn"> Save
            </button>
         </div>
         <div class="row">
           <div id="10" class="col-2 hour">10:00am</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save
+          <button id= '10-btn' class="col-2 saveBtn"> Save
            </button>
         </div>
         <div class="row">
           <div id="11" class="col-2 hour">11:00am</div>
           <textarea class="col-8 description">
           </textarea>
-          <button id='saveBtn' class="col-2 saveBtn"> Save
+          <button id='11-btn'  class="col-2 saveBtn"> Save
            </button>
         </div>
         
@@ -56,42 +56,42 @@
           <div id="12" class="col-2 hour">12:00pm</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save
+          <button id='12-btn' class="col-2 saveBtn"> Save
            </button>
         </div>
         <div class="row">
-          <div id="1" class="col-2 hour">1:00pm</div>
+          <div id="13" class="col-2 hour">1:00pm</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save
+          <button id="13-btn" class="col-2 saveBtn"> Save
            </button>
         </div>
         <div class="row">
-          <div id="2" class="col-2 hour">2:00pm</div>
+          <div id="14" class="col-2 hour">2:00pm</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save 
+          <button id='14-btn' class="col-2 saveBtn"> Save 
            </button>
         </div>
         <div class="row">
-          <div id="3" class="col-2 hour">3:00pm</div>
+          <div id="15" class="col-2 hour">3:00pm</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save
+          <button id='15-btn' class="col-2 saveBtn"> Save
            </button>
         </div>
         <div class="row">
-          <div id="4" class="col-2 hour">4:00pm</div>
+          <div id="16" class="col-2 hour">4:00pm</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save
+          <button  id='16-btn'class="col-2 saveBtn"> Save
            </button>
         </div>
         <div class="row">
-          <div id="5" class="col-2 hour">5:00pm</div>
+          <div id="17" class="col-2 hour">5:00pm</div>
           <textarea class="col-8 description">
           </textarea>
-          <button class="col-2 saveBtn"> Save
+          <button id='17-btn' class="col-2 saveBtn"> Save
            </button>
         </div>
       
